; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_param.c_hb_validate_filter_string.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_param.c_hb_validate_filter_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_validate_filter_string(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32* @hb_parse_filter_settings(i8* %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %19

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @hb_validate_filter_settings(i32 %14, i32* %15)
  store i32 %16, i32* %7, align 4
  %17 = call i32 @hb_value_free(i32** %6)
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %13, %12
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32* @hb_parse_filter_settings(i8*) #1

declare dso_local i32 @hb_validate_filter_settings(i32, i32*) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
